2011-02-28  Tim Marston <edam@waxworlds.org>

	* gtypist.c: rewrote the code to open a script file and check for the
	  presence of HOME environment variable (required for the bestlog) so
	  that it should work on Windows platforms when HOME is not present.

2011-02-26  Tim Marston <edam@waxworlds.org>

	* gtypist.c: added best-score tracking feature and re-wrote some of the
	  speed calculation/display code to always work with CPM (which are
	  saved in the bestlog) and convert to WPM only at display-time.

2011-01-03  Tim Marston <edam@waxworlds.org>

	* gtypist.c: fixed a bug where pressing escape during wait_user()
	  caused seek_label() to be called, but get_script_line() was never re-
	  called. This meant that the previously buffered next script line
	  (from before the seek) would still get executed. wait_user() now
	  treats escape as a "continue" character for all but tutorial prompts,
	  which now handle the seek properly by calling get_script_line().

2009-02-19  Paul Goins  <general@vultaire.net>

	* gtypist.c: Re-fixed the rounding bug by adding a function which
	  compares floats using sprintf-based rounding.  (Bug re-reported by
	  Jakub Gedeon.)

2009-02-04  Paul Goins  <general@vultaire.net>

	* gtypist.c: (display_speed): Fixed long-standing bug where gtypist
	  would display that an error rate of =< 3.0% is needed, but the
	  displayed error rate would sometimes be 3.0% due to rounding.  (Now
	  we use floor() to always round down and avoid this.)
	  (Error reported by Ali Gundaz)

2008-05-17  Paul Goins  <general@vultaire.net>

	* gtypist.c (display_speed): Changed maximum speed to 9999.99.  CPM
	  mode could go into 4 digits for really, really fast typists.

2008-05-12  Paul Goins  <general@vultaire.net>

	* cursmenu.c, gtypist.c, script.h: Updated copyright notices.
	* gtypist.c: Bug fix: --banner-colour, the alternate option for
	  --banner-colours, changed to --banner-colors.

2008-05-07  Paul Goins  <general@vultaire.net>
